The payment method done

--- a/azapp/templates/account/login_signup.html
+++ b/azapp/templates/account/login_signup.html
@@ -10,7 +10,7 @@
     {% if user.is_authenticated %}
     <div class="col-12 py-5">
         <p class="text-center alert alert-warning"><i class="fas fa-exclamation-circle"></i> you are already logged in</p>
-        <a href="{% url 'shop:home' %}" class="btn btn-default">Continue Shopping</a>
+        <a href="{% url 'switch2voip:home' %}" class="btn btn-default">Continue Shopping</a>
     </div>
     {% else %}
     <div class="col-12 col-sm-12 col-md-6 col-lg-6 mt-3">
@@ -20,7 +20,7 @@
         {% csrf_token %}
         {{ form1 }}
         <button type="submit" class="btn btn-success btn-sm">Log in</button>
-        <p><a href="{% url 'account_reset_password' %}">Lost your password?</a></p>
+        <p><a href="">Lost your password?</a></p>
       </form>
     </div>
   </div>
