--- a/azapp/templates/account/password_reset.html
+++ b/azapp/templates/account/password_reset.html
@@ -10,7 +10,7 @@
     {% if user.is_authenticated %}
     <div class="col-12 py-5">
         <p class="text-center alert alert-warning"><i class="fas fa-exclamation-circle"></i> you are already logged in</p>
-        <a href="{% url 'shop:home' %}" class="btn btn-default">Continue Shopping</a>
+        <a href="{% url 'switch2voip:home' %}" class="btn btn-default">Continue Shopping</a>
     </div>
     {% else %}
     <h4 class="h4-responsive text-center mt-4">Password Reset</h4>
