--- a/azapp/templates/shop/products/category.html
+++ b/azapp/templates/shop/products/category.html
@@ -28,8 +28,9 @@
            </div>
            <div class="card-body fix mycard">
              <p class="card-text text-with-dots">{{ product.name }}.</p>
-             <p class="card-text text-with-dots">{{ product.description }}</p>
-             <p class="card-text text-md-right">{{ settings.CURRENCY }} {{ product.price }}</p>
+             <p class="card-text text-with-dots">{{ product.
+                 }}</p>
+             <p class="card-text text-md-right">{{ set tings.CURRENCY }} {{ product.price }}</p>
            </div>
          </div>
          </a>
