--- a/azapp/templates/account/home.html
+++ b/azapp/templates/account/home.html
@@ -12,6 +12,9 @@
       {% endfor %}
   </ul>
   {% endif %}
+
+    {{email}}
+
   <div class="row">
       <div class="col-sm-12 col-md-3 col-lg-2 mt-3">
         <div class="card card1">
@@ -32,8 +35,9 @@
             <div class="card-body">
               <p class="font-weight-bold">US$0.00</p>
               <form>
-              <input class="amount" type="number" name="amount_field" min="10" placeholder="$">
-              <input class="btn btn-primary btn-sm" type="submit" name="submit" value="Recharge">
+              <input class="amount" type="number" name="amount" min="10" placeholder="$">
+                  {% csrf_token %}
+              <input class="btn btn-primary btn-sm" type="submit" name="submit" value="Recharge" formaction="{% url 'carts:Charge_checkout' %}" formmethod="post" >
             </form>
             </div>
         </div>
