--- a/azapp/templates/carts/success.html
+++ b/azapp/templates/carts/success.html
@@ -1,15 +1,19 @@
-<html>
-<head>
-  <title>Thanks for your order!</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}
+    {{ settings.BRAND_NAME }}
+{% endblock %}
+{% block content %}
+
   <section>
 
     <p>
       We appreciate your business! If you have any questions, please email
-      <a href="mailto:orders@example.com">orders@example.com</a>.
+      <a href="matosvictor@example.com">matosvictor@example.com</a>.
     </p>
+
+      <a class="btn btn-success" href="/switch2voip/shop/">
+                        Continue Shopping
+                    </a>
   </section>
-</body>
-</html>
+{%endblock%}
