--- a/azapp/templates/core/youapps/nav.html
+++ b/azapp/templates/core/youapps/nav.html
@@ -48,8 +48,8 @@
             {% endif %}
             </a>
             <hr>
-            {% for c in categories %}
-            <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+            {% for k in categories %}
+            <a class="dropdown-item" href="#">{{ k.name }}</a>
             {% endfor %}
           </div>
         </li>
@@ -58,7 +58,7 @@
             aria-haspopup="true" aria-expanded="false">My Account</a>
           <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
             {% if user.is_authenticated %}
-            <a class="dropdown-item" href="#">Profile</a>
+           <a class="dropdown-item" href="{% url 'users:user_profile' %}">Profile</a>
               {% if user.is_staff %}
                 <a class="dropdown-item" href="/admin/">Manage site</a>
                 <a class="dropdown-item" href="#">Dashboard</a>
